objects/Member__c.object
<CustomObject>
    <description>Member Object</description>
    <fields>
        <fullName>Cus_email__c</fullName>
        <label>Cus_email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile_NO__c</fullName>
        <description>Enter mobile no</description>
        <label>Mobile NO</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Enter your name</description>
        <label>Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Member Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member_name</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Member_phn_rule</fullName>
        <active>true</active>
        <description>Mobile phn no validation</description>
        <errorConditionFormula>NOT(REGEX(Mobile_NO__c ,&quot;[+91]{3}-[0-9]{10}&quot;))</errorConditionFormula>
        <errorDisplayField>Mobile_NO__c</errorDisplayField>
        <errorMessage>Enter valid Mobile no</errorMessage>
    </validationRules>
</CustomObject>